IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
8/30/13: Added option to Genhstplt to form linear combination of columns.

8/27/13: Improved tooltips for eTomo - PEET.(Bug# 1740)

8/27/13: Added complete version information to the etomo error log file.
(Bug# 1733)

8/27/13: Added a bidirectional tilt series option to eTomo - Setup Tomogram.
(Bug# 1732)

8/24/13: IMOD_4-6-28
8/24/13: Improved the layout, behavior, labels, and tooltips of the "Align
Serial Sections / Blend Montages" interface.(Bug# 1730)

8/23/13: There are now two system templates that can be selected in the eTomo
startup page; plasticSection just turns on Sobel filter centering in tracking;
cyoSample turns that on with the correct filter and changes a few other
settings; see Using Etomo for details.

8/23/13: Fixed Tiltxcorr to compute warping with a seed point model.

8/23/13: Fixed Newstack to set output size properly for +/-270 rotation.

8/22/13: Added ".mrc" as a default volume file extension to the file choosers.
(Bug# 1701)

8/20/13: Fixed bug in Autofidseed that made it use data only from the last
track instead of from all three (caused by 12/13/12 Clipmodel change).

8/20/13: Made contour copying work with contours selected in multiple objects.

8/20/13: Added support for dual/multi tilt missing wedge compensation during
PEET averaging.(Bug# 1688)

8/18/13: The Serial Section Alignment guide now describes how to use the
interface in eTomo.

8/15/13: Made Newstack floating scale images with extreme ranges to different
mean and SD to preserve dynamic range for other images.

8/13/13: IMOD_4-6-27
8/13/13: Added ability to draw the interior of contours in the Zap window with
transparent color (see Edit-Object-type dialog).

8/13/13: Allowed 0 to be entered for Cs in Ctfplotter and Ctfphaseflip.

8/12/13: IMOD_4-6-26
8/12/13: Added ability to scale output from clip multiply and divide.
